# yocto-security-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  codeql.yml  publish.yml  scorecard.yml
.kiro/agents/: yocto-cve-backport-interactive.json  yocto-cve-backport.json
cve_agent/: AGENT_INSTRUCTIONS.md  __main__.py  backend.py  claude_backend.py  context.py  git.py  kiro_backend.py  knowledge.py  orchestrator.py  review.py  session.py
cve_corrector/: bitbake_ops.py  cherry_pick.py  git_ops.py  meta_layer.py  utils.py  workflow.py  workspace.py
cve_metadata_extractor/: __init__.py  __main__.py  config.json  config.py  cve_sources.py  cvelistv5.py  debian.py  mirrors.py  oe_status.py  osv.py  processing.py  sources.py  ubuntu.py  utils.py
extra/: README.md
shared/: git_runner.py  url_parser.py
tests/: conftest.py  helpers.py
tests/agent/: test_audit.py  test_backend.py  test_cases_orchestration.py  test_claude_backend.py  test_claude_cli_contract.py  test_claude_kiro_parity.py  test_claude_live.py  test_context.py  test_context_comprehensive.py  test_context_full.py  test_git.py  test_git_full.py  test_init.py  test_interactive.py  test_knowledge.py  test_knowledge_integration.py  test_main.py  test_main_cli.py  test_main_process.py  test_preserve_commit_msg.py  test_review.py  test_review_comprehensive.py  test_security.py  test_session.py  test_session_full.py  test_setup.py
tests/corrector/: test_bitbake_full.py  test_bitbake_ops.py  test_blame.py  test_cases_conflict.py  test_cases_monorepo.py  test_cases_series.py  test_cases_single_patch.py  test_cases_special.py  test_dry_run.py  test_ensure_layer_branch.py  test_git_full.py  test_git_ops.py  test_main_cli.py  test_patch.py  test_ptest.py  test_state.py  test_utils.py  test_workflow.py  test_workflow_full.py
tests/extractor/: test_debian.py  test_main_and_processing.py  test_osv.py  test_sources.py  test_ubuntu.py  test_utils.py
tests/integration/: README.md  enrich_metadata_from_oe.py  fetch_mirrors.sh  generate_differences_report.py  test-cases-cve-metadata.json  test-cve-metadata-agent.json  test_common.sh  test_common_sh.py  test_cve_corrector.sh  test_cve_corrector_cases.sh  test_utils.py
tests/shared/: test_conftest_fixtures.py  test_url_parser.py
